// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credentials.jsx Snapshot: Match admin 1`] = `
<div
  className="ant-spin-nested-loading"
>
  <div
    className="ant-spin-container"
  >
    <h1>
      Credentials
    </h1>
    <div
      className="box-container"
    >
      <div
        className="box-container__toolbox"
      >
        <span
          className="ant-input-group-wrapper ant-input-search"
          style={
            Object {
              "width": 250,
            }
          }
        >
          <span
            className="ant-input-wrapper ant-input-group"
          >
            <input
              className="ant-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Search..."
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-group-addon"
            >
              <button
                className="ant-btn ant-btn-icon-only ant-input-search-button"
                onClick={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <span
                  aria-label="search"
                  className="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
        <div
          className="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div
            className="ant-select-selector"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <span
              className="ant-select-selection-search"
            >
              <input
                aria-activedescendant="undefined_list_0"
                aria-autocomplete="list"
                aria-controls="undefined_list"
                aria-haspopup="listbox"
                aria-owns="undefined_list"
                autoComplete="off"
                className="ant-select-selection-search-input"
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onPaste={[Function]}
                readOnly={true}
                role="combobox"
                style={
                  Object {
                    "opacity": 0,
                  }
                }
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              className="ant-select-selection-placeholder"
            >
              Filter type
            </span>
          </div>
          <span
            aria-hidden={true}
            className="ant-select-arrow"
            onMouseDown={[Function]}
            style={
              Object {
                "WebkitUserSelect": "none",
                "userSelect": "none",
              }
            }
            unselectable="on"
          >
            <span
              aria-label="down"
              className="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
        <button
          className="ant-btn"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-label="sync"
            className="anticon anticon-sync"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="sync"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
              />
            </svg>
          </span>
          <span>
            Refresh
          </span>
        </button>
      </div>
      <div>
        <div
          className="ant-row box-container__row"
          style={
            Object {
              "marginBottom": 16,
              "marginLeft": -16,
              "marginRight": -16,
              "marginTop": -16,
            }
          }
        >
          <div
            className="ant-col ant-col-xs-24 ant-col-sm-24 ant-col-md-12 ant-col-xl-6"
            style={
              Object {
                "paddingBottom": 16,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 16,
              }
            }
          >
            <div
              className="ant-card ant-card-bordered"
              onClick={null}
            >
              <div
                className="ant-card-body"
                style={Object {}}
              >
                <div
                  className="ant-card-meta"
                >
                  <div
                    className="ant-card-meta-avatar"
                  >
                    <span
                      className="ant-avatar ant-avatar-square ant-avatar-image"
                      style={
                        Object {
                          "fontSize": 18,
                          "height": 60,
                          "lineHeight": "60px",
                          "width": 60,
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        src="redmine-logo.png"
                      />
                    </span>
                  </div>
                  <div
                    className="ant-card-meta-detail"
                  >
                    <div
                      className="ant-card-meta-title"
                    >
                      test-credentials
                    </div>
                    <div
                      className="ant-card-meta-description"
                    >
                      https://fit.cvut.cz
                    </div>
                  </div>
                </div>
              </div>
              <ul
                className="ant-card-actions"
              >
                <li
                  style={
                    Object {
                      "width": "50%",
                    }
                  }
                >
                  <span>
                    <span
                      aria-label="edit"
                      className="anticon anticon-edit"
                      onClick={[Function]}
                      role="img"
                      tabIndex={-1}
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="edit"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                        />
                      </svg>
                    </span>
                  </span>
                </li>
                <li
                  style={
                    Object {
                      "width": "50%",
                    }
                  }
                >
                  <span>
                    <span
                      aria-label="delete"
                      className="anticon anticon-delete"
                      onClick={[Function]}
                      role="img"
                      tabIndex={-1}
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="delete"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                        />
                      </svg>
                    </span>
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        className="button-action"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        <div
          className=""
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-circle ant-btn-icon-only button"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-label="plus"
              className="anticon anticon-plus"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="plus"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                />
                <path
                  d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Credentials.jsx Snapshot: Match user 1`] = `
<div
  className="ant-spin-nested-loading"
>
  <div
    className="ant-spin-container"
  >
    <h1>
      Credentials
    </h1>
    <div
      className="box-container"
    >
      <div
        className="box-container__toolbox"
      >
        <span
          className="ant-input-group-wrapper ant-input-search"
          style={
            Object {
              "width": 250,
            }
          }
        >
          <span
            className="ant-input-wrapper ant-input-group"
          >
            <input
              className="ant-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Search..."
              style={null}
              type="text"
              value=""
            />
            <span
              className="ant-input-group-addon"
            >
              <button
                className="ant-btn ant-btn-icon-only ant-input-search-button"
                onClick={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <span
                  aria-label="search"
                  className="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
        <div
          className="ant-select ant-select-single ant-select-allow-clear ant-select-show-arrow"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div
            className="ant-select-selector"
            onClick={[Function]}
            onMouseDown={[Function]}
          >
            <span
              className="ant-select-selection-search"
            >
              <input
                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autoComplete="off"
                className="ant-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                onChange={[Function]}
                onCompositionEnd={[Function]}
                onCompositionStart={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onPaste={[Function]}
                readOnly={true}
                role="combobox"
                style={
                  Object {
                    "opacity": 0,
                  }
                }
                type="search"
                unselectable="on"
                value=""
              />
            </span>
            <span
              className="ant-select-selection-placeholder"
            >
              Filter type
            </span>
          </div>
          <span
            aria-hidden={true}
            className="ant-select-arrow"
            onMouseDown={[Function]}
            style={
              Object {
                "WebkitUserSelect": "none",
                "userSelect": "none",
              }
            }
            unselectable="on"
          >
            <span
              aria-label="down"
              className="anticon anticon-down ant-select-suffix"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </span>
          </span>
        </div>
        <button
          className="ant-btn"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-label="sync"
            className="anticon anticon-sync"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="sync"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
              />
            </svg>
          </span>
          <span>
            Refresh
          </span>
        </button>
      </div>
      <div>
        <div
          className="ant-row box-container__row"
          style={Object {}}
        >
          <div
            className="ant-col ant-col-24"
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            <div
              className="ant-empty"
            >
              <div
                className="ant-empty-image"
              >
                <img
                  alt="empty"
                  src="no_data.png"
                />
              </div>
              <p
                className="ant-empty-description"
              >
                <span>
                  No credentials found.
                </span>
              </p>
              <div
                className="ant-empty-footer"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
